# crypto-jack-agent

./: README.md  monitor_logs.db  pyproject.toml  run.py
.github/workflows/: ci.yml
deployments/: DOCKERFILE  deployment.yaml  docker-compose.yml
ebpf_monitor/: alert.py  app.py  authentication.py  config.py  database.py  ebpf_monitor.py  enricher.py  prom.py  simulation.py
tests/: test_alert.py  test_authentication.py  test_database.py  test_integration.py  test_simulation.py
tests/kubernetes/: adversary_simulation.yml
